@@ -17,13 +17,25 @@ is_deeply [ $e->keyvals->flatten ], [ answer => '42' ], 'keyvals';
 $e = Code [ '', [], [ [ foo => '1' ], [ bar => '2' ], [ foo => '3' ] ] ], '';
 is_deeply [ $e->keyvals->flatten ], [ foo => 1, bar => 2, foo => 3 ], 'keyvals';
 
-my $a = Hash::MultiValue->new(
-    foo => 1, id => 0, bar => 2, foo => 3, class => 'a', class => 'b c',
-);
-$e = Code attributes $a, 'x';
+$e->keyvals( Hash::MultiValue->new(
+    foo => 9, id => 0, bar => 8, foo => 7, class => 'a', class => 'b c',
+) );
 is_deeply $e->attr,
-    [ '0', [qw(a b c)], [ [ foo => 1 ], [ bar => 2 ], [ foo => 3 ] ] ],
+    [ '0', [qw(a b c)], [ [ foo => 9 ], [ bar => 8 ], [ foo => 7 ] ] ],
     'attributes via Hash::MultiValue';
+
+$e->keyvals({ foo => 3, class => 'x y' });
+is_deeply [ '0', [qw(a b c x y)], [ [ foo => 3 ] ] ], $e->attr, 'keyvals as setter';
+
+$e->id(2);
+is '2', $e->id, 'id setter';
+
+$e->class('q r');
+is_deeply [qw(q r)], $e->classes, 'classes setter';
+
+$e->keyvals( a => 1, class => ['s'], a => 2 );
+is_deeply [ '2', [qw(q r s)], [ [ a => 1 ], [ a => 2 ] ] ], $e->attr, 'keyvals as setter';
+
 
 my @class_hashes = (
     { class => [qw(foo bar doz)] },
@@ -37,9 +49,9 @@ foreach (@class_hashes) {
 }
 
 foreach (qw(foo bar doz)) {
-    is $e->class($_), $_, 'class selector';
+    ok $e->match(".$_"), 'class match';
 }
 
-is $e->class('baz'), '', 'class selector';
+ok !$e->match('.baz'), 'class selector';
 
 done_testing;
